--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "psutil>=5.9.0",
     "aiofiles>=23.0.0",
     "PyYAML>=6.0.0",
+    "httpx>=0.24.0",
 ]
 
 [project.optional-dependencies]
@@ -41,6 +42,7 @@ dev = [
     "isort>=5.12.0",
     "flake8>=6.0.0",
     "mypy>=1.0.0",
+    "httpx>=0.24.0",
 ]
 
 [project.urls]
@@ -75,12 +77,18 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+asyncio_mode = "auto"
 addopts = [
     "--verbose",
     "--tb=short",
     "--strict-markers",
+    "--cov=src/ollama_mcp",
+    "--cov-report=html",
+    "--cov-report=term-missing",
 ]
 markers = [
+    "unit: Unit tests",
+    "integration: Integration tests",
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests",
+    "ollama_required: Tests requiring Ollama server",
 ]
