--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,15 @@ classifiers = [
 
 dependencies = [
     "mcp>=1.0.0",
-    "ollama>=0.3.0",
+    "ollama>=0.3.0", 
     "psutil>=5.9.0",
     "aiofiles>=23.0.0",
     "PyYAML>=6.0.0",
     "httpx>=0.24.0",
+    # New dependencies for refactored architecture
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+    "typing-extensions>=4.5.0",
 ]
 
 [project.optional-dependencies]
